--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .home{
   
-  position: absolute;
 }
 
+#tsparticles {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1 !important ;
+  top: 0;
+  left: 0
+}
