--- a/src/component/events.css
+++ b/src/component/events.css
@@ -40,3 +40,50 @@ background: linear-gradient(to right, #C576F6 21%, #04AAF8 100%);
 -webkit-text-fill-color: transparent;
 font-size: 30px;
 }
+
+/* .grid{
+    
+    width: 216px;
+    height: 216px;
+    border-radius: 50%;
+    border: 2px solid re;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3%;
+    background: linear-gradient(to right, #00CCFF, purple);
+
+} */
+
+/* .grid1{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: px;
+    content: url(../image/tech1.jpg);
+}     */
+
+.row{
+    padding-top: 2%;
+}
+
+.circle-1 {
+    width:200px !important;
+    height:200px !important;
+    border-radius: 50%;
+    border:20px solid #baacc6;
+    float:left;
+  }
+  
+  .circle-1 img {
+    width:180px !important;
+    height: 180px !important;;
+    border-radius: 50%;
+    cursor:pointer;
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+  }
+ 
