--- a/src/component/events.css
+++ b/src/component/events.css
@@ -41,21 +41,22 @@ background: linear-gradient(to right, #C576F6 21%, #04AAF8 100%);
 font-size: 30px;
 }
 
-/* .grid{
+.grid{
     
     width: 216px;
     height: 216px;
     border-radius: 50%;
     border: 2px solid re;
-    
+    background-color: white;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3%;
-    background: linear-gradient(to right, #00CCFF, purple);
+    
+    box-shadow: 6px 6px 60px rgba(4, 170, 248, 0.6);
 
-} */
+}
 
-/* .grid1{
+ .grid1{
     width: 200px;
     height: 200px;
     border-radius: 50%;
@@ -64,7 +65,8 @@ font-size: 30px;
     width: 200px;
     height: px;
     content: url(../image/tech1.jpg);
-}     */
+    opacity: 0.8;
+}     
 
 .row{
     padding-top: 2%;
