--- a/src/component/events.css
+++ b/src/component/events.css
@@ -46,8 +46,6 @@ font-size: 30px;
     width: 216px;
     height: 216px;
     border-radius: 50%;
-    border: 2px solid re;
-    
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3%;
@@ -62,8 +60,7 @@ font-size: 30px;
     margin-left: auto;
     margin-right: auto;
     width: 200px;
-    height: px;
-    content: url(../image/tech1.jpg);
+    height: 100px;
 }     
 
 .row{
