--- a/src/component/event-details.css
+++ b/src/component/event-details.css
@@ -17,13 +17,21 @@ p{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
+.evebtn{
+    padding: 20px !important;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .card{
     background: rgba(0, 0, 0, 0.4);
     border-radius: 30px;
 
 }
-
+.txt{
+    margin-left:15% !important;
+    margin-bottom: 18px;
+}
 .hbtn1{
     background-image: linear-gradient(to right, #1FA2FF 0%, #12D8FA  51%, #1FA2FF  100%);
 
@@ -38,7 +46,7 @@ p{
     display: block;
     height:55px;
     width:150px !important;
-    margin-left:45% ;
+   
     margin-top: 4%;
     border-color: #00CCFF;
 
