--- a/src/component/event-details.css
+++ b/src/component/event-details.css
@@ -1,17 +1,17 @@
-h1{
+head{
     background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 22px #00CCFF;
 }
 
-h4{
+head{
     background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-p{
+head{
     font-size: 20px;
     background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
     -webkit-background-clip: text;
