--- a/src/component/event-details.css
+++ b/src/component/event-details.css
@@ -1,22 +1,12 @@
-h1{
-    background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
+.gradient-text {
+    background-image: linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
+    background-size: 100%;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 0px 0px 22px #00CCFF;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
 
-h4{
-    background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-p{
-    font-size: 20px;
-    background: -webkit-linear-gradient(180deg, #04AAF8 0%, #C576F6 70.31%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 .evebtn{
     padding: 20px !important;
     margin-top: 10px;
