--- a/src/component/contact.css
+++ b/src/component/contact.css
@@ -18,13 +18,15 @@
 .cp1{
     color:white;
     font-size: 30px;
-    font-weight: bold;
+    
     text-align: center;
+    font-variant: small-caps;
    
 
 }
 .map{
-    
+    height: 500px;
+    width: 500px;
     border-radius: 10px;
     margin-top: 4%;
     margin-left: auto;
@@ -39,18 +41,70 @@
     font-size: 25px;
     color:white ;
     margin-top: 2%;
+   
 
 }
 .ctcont1{
-    margin-top: 18%;
-    margin-left: 10%;
+    margin-top: 13%;
+   margin-left: auto;
+   margin-right: auto;
 }
+
+.hover-fx {
+  font-size: 36px;
+  display: inline-block;
+  cursor: pointer;
+  margin: 15px;
+  width: 90px;
+  height: 80px;
+  line-height: 84px;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  color: rgb(255, 255, 255);
+  background-color: rgba(211, 211, 211, 0.299);
+  transition: 300ms;
+  margin-top: 1%;
+}
+
+.hover-fx:after {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  content: '';
+  box-sizing: content-box;
+ 
+
+  box-shadow: 0px 0px 0px 3px rgba(4, 170,248,0.9);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 300ms;
+}
+
+.hover-fx:hover {
+  background-color: rgba(4, 170,248,0.9);
+  color: #ffffff;
+  box-shadow:1px 1px 1px 1px #1cb5ad;
+}
+
+.hover-fx:hover:after {
+  opacity: 1;
+  transform: scale(1.15);
+}
+.bi{
+  width:100px;
+  margin-left: -7%;
+  margin-top: -10%;
+  
+}
+
+
+
 @media only screen and (max-width:991px) {
-    .ctcont1{
-        margin-top: 10%;
-        margin-top: 1%;
-        margin-right: auto;
-    }
+    
     .map{
         height:350px;
         width:380px;
@@ -62,11 +116,36 @@
         margin-left:4%;
         font-size: 19px;
         color:white ;
-    
+        width: 200px;
+        height: 130px;
+        padding-top: 40px;
+       
     }
+
+    .cd1{
+      height:400px;
+      width:400px;
+      margin-left: auto;
+      margin-right: auto;
+     
+  }
+
+  .ctcont1{
+    margin-top: 0;
+    margin-left: 5%;
+    margin-right: auto;
+    
+  }
    
-        
-    
+  .hover-fx{
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .cttxt{
+   margin-left: auto;
+   margin-right: auto;
+
+}
     
     
   }
@@ -80,53 +159,4 @@
 
   
   
-  .hover-fx {
-    font-size: 36px;
-    display: inline-block;
-    cursor: pointer;
-    margin: 15px;
-    width: 90px;
-    height: 80px;
-    line-height: 84px;
-    border-radius: 50%;
-    text-align: center;
-    position: relative;
-    color: rgb(255, 255, 255);
-    background-color: rgba(211, 211, 211, 0.299);
-    transition: 300ms;
-    margin-top: 1%;
-  }
   
-  .hover-fx:after {
-    pointer-events: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    content: '';
-    box-sizing: content-box;
-   
- 
-    box-shadow: 0px 0px 0px 3px rgba(4, 170,248,0.9);
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: 300ms;
-  }
-  
-  .hover-fx:hover {
-    background-color: rgba(4, 170,248,0.9);
-    color: #ffffff;
-    box-shadow:1px 1px 1px 1px #1cb5ad;
-  }
-  
-  .hover-fx:hover:after {
-    opacity: 1;
-    transform: scale(1.15);
-  }
-  .bi{
-    width:100px;
-    margin-left: -7%;
-    margin-top: -10%;
-    
-  }
