--- a/src/component/events.css
+++ b/src/component/events.css
@@ -30,7 +30,7 @@ font-variant: small-caps;
 
 .card{
     background: rgba(0, 0, 0, 0.4);
-box-shadow: 6px 6px 60px rgba(4, 170, 248, 0.6);
+
 border-radius: 30px;
 
 }
@@ -67,8 +67,8 @@ font-size: 30px;
     width:250px !important;
     height:250px !important;
     border-radius: 50%;
-    border:10px solid #00CCFF;
-    box-shadow: 6px 6px 60px rgba(4, 170,248,0.4);
+    border:10px solid #00FF66;
+    box-shadow: 6px 6px 60px rgba(4, 248, 53, 0.4);
     
     opacity: 1;
   display: block;
@@ -110,12 +110,11 @@ font-size: 30px;
     max-height: 100%;
     object-fit: cover;
     transition-duration: 1s;
-     transition-timing-function: ease;
-
+    transition-timing-function: ease;
     backface-visibility: hidden;
   }
   .circle-1:hover{
-    box-shadow: 6px 6px 60px rgba(4, 170,248,0.7);
+    box-shadow: 6px 6px 60px #00FF66;
   
   }
 
@@ -136,6 +135,46 @@ font-size: 30px;
   text-decoration: none;
 }
 
-.pad{
-  padding-bottom: 4%;
+
+@media only screen and (max-width:991px) {
+    
+  .circle-1 {
+    width:150px !important;
+    height:150px !important;
+    border:5px solid #00FF66;   
 }
+
+  .pad{
+
+  }
+
+  .evename{
+    opacity: 1;
+    color: white;
+    text-align: center;
+    position: absolute;
+    display: flex;
+    font-size: 20px ;
+    
+  }
+
+  img{
+    opacity: 0.3;
+  }
+  .align{
+    margin-top: 70px;
+    margin-left: 35px;
+  }
+ 
+  
+}
+
+
+
+
+
+
+
+
+
+
