--- a/src/component/home.modules.css
+++ b/src/component/home.modules.css
@@ -29,7 +29,7 @@
     margin-right: auto !important;
     width: 700px !important; 
     text-align: center;
-    margin-top: -25px;
+   
 
 }
 .hp1{
@@ -46,17 +46,18 @@
     margin-top: 3%;
 }
 .hp4{
-    color: #00CCFF;
+    color: #50cb8b;
     font-size: 70px;
     width: 100%;
     font-family:space ;
-    text-shadow:2px 2px 2px 2px #00CCFF;
-    text-shadow: 0px 0px 22px #00CCFF;
+    text-shadow:2px 2px 2px 2px #00FF66;
+    text-shadow: 0px 0px 22px #00FF66;
 }
 .hbody{
     margin-left: auto !important;
     margin-right: auto !important;
     margin-top: 1% !important;
+    margin-bottom: 3%;
     z-index: 5 !important;
     text-align: center !important;
 }
@@ -81,7 +82,7 @@
 
 }
 .htp2{
-   color: #00CCFF;
+   color: #00FF66;
     font-size: 20px;
     text-align: center;
     font-weight: bold;
@@ -113,14 +114,14 @@
     transition: 0.5s;
     background-size: 200% auto;
     color: white;            
-    box-shadow: 0 0 10px #00CCFF;
+    box-shadow: 0 0 10px #00FF66;
     border-radius: 10px;
     display: block;
     height:55px;
     width:150px !important;
     margin-left:45% ;
     margin-top: 4%;
-    border-color: #00CCFF;
+    border-color: #00FF66;
 
 }
 .hbtn1:hover{
