sena events commit

--- a/src/component/event-details.css
+++ b/src/component/event-details.css
@@ -25,29 +25,31 @@
     width: 700px;
 }
 .dbtn1{
-    background-image: linear-gradient(to right, #1FA2FF 0%, #12D8FA  51%, #1FA2FF  100%);
-
+    background-image: linear-gradient(to right, #24FE41  0%, #24FE41  51%,#24FE41  100%);
+    margin: 10px;
     padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
     color: white;            
-    box-shadow: 0 0 5px #00CCFF;
+    box-shadow: 6px 6px 60px rgba(4, 248, 53, 0.4);
     border-radius: 10px;
     display: block;
-    height:55px;
-    width:150px !important;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2%;
-    border-color: #00CCFF;
+    margin-top: 4%;
+
 
 }
-.hbtn1:hover{
-            background-position: right center; /* change the direction of the change here */
-            color: #fff;
-            text-decoration: none;
+.dbtn1:hover{
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+    box-shadow: 0 0 20px #eee;
+
 }
 
 .c{
