--- a/src/component/home.modules.css
+++ b/src/component/home.modules.css
@@ -133,6 +133,21 @@
             box-shadow: 0 0 20px #eee;
 
 }
+
+
+
+
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
+
+body {
+  color: #fff;
+  font-family: "Roboto Condensed", sans-serif;
+  background-image: url(https://images.unsplash.com/photo-1508389377389-b8221c0bcc9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-position: top top;
+  background-size: cover;
+  margin: 0;
+}
+
 @media only screen and (max-width: 600px) {
     .container{
         margin-bottom: -11%;
