--- a/src/component/Countdown/Timer.css
+++ b/src/component/Countdown/Timer.css
@@ -1,16 +1,18 @@
 #countdown {
     width: 250px;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.1);
-    display: inline-block;
+    color: white;
+    /* background-color: rgba(255, 255, 255, 0.1); */
+    /* display: inline-block; */
     text-align: center;
     margin: auto;
   }
   #countdown .box {
-    padding: 10px;
+    padding-right: 20px;
+    
     border-right: solid 1px rgba(255, 255, 255, 0.2);
   }
-  #countdown .col-4:last-child .box {
+  #countdown .col-3:last-child .box {
     border-right-color: transparent;
   }
   #countdown .box p {
@@ -24,9 +26,9 @@
   }
   
   @media (min-width: 768px) {
-    .container {
+    /* .container {
       width: 1100px;
-    }
+    } */
     h1 {
       font-size: 58px;
     }
