--- a/src/component/Countdown/Timer.css
+++ b/src/component/Countdown/Timer.css
@@ -1,7 +1,6 @@
 #countdown {
-    width: 250px;
-    padding: 10px;
-    color: white;
+  padding-left:7%;
+      color: white;
     /* background-color: rgba(255, 255, 255, 0.1); */
     /* display: inline-block; */
     text-align: center;
@@ -9,6 +8,7 @@
   }
   #countdown .box {
     padding-right: 20px;
+    
     
     border-right: solid 1px rgba(255, 255, 255, 0.2);
   }
@@ -33,7 +33,7 @@
       font-size: 58px;
     }
     #countdown {
-      width: 350px;
+      width: 30%;
       padding: 20px;
     }
   }
