--- a/src/component/home.modules.css
+++ b/src/component/home.modules.css
@@ -81,7 +81,11 @@
     height:500px;
     
 } */
+img#calender {
+    margin-top: 6%;
+}
 .htp1{
+    height: 82.5px;
     color: aliceblue;
     font-size: 20px;
     text-align: center;
