--- a/src/component/contact.css
+++ b/src/component/contact.css
@@ -102,6 +102,14 @@
   
 }
 
+.loader{
+  margin-left: 100px;
+  margin-top: 70px;
+  position: absolute;
+
+}
+
+
 
 
 @media only screen and (max-width:991px) {
@@ -147,6 +155,12 @@
    margin-right: auto;
 
 }
+.loader{
+  margin-left: 50px;
+  margin-top: 70px;
+  position: absolute;
+
+}
     
     
   }
@@ -165,6 +179,14 @@
   lord-icon#loc{
     margin-top: 12%;
   }
+
+  .loader{
+    margin-left: 55px;
+    margin-top: 70px;
+    position: absolute;
+  
+  }
+     
 
   }
   
