--- a/src/component/contact.css
+++ b/src/component/contact.css
@@ -1,54 +1,44 @@
-
-
-.cd1{
-    height:500px;
-    width:500px;
-    margin-left: auto;
-    margin-right: auto;
-   
+.cd1 {
+  height: 500px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.cd2{
-    height:500px;
-    width:500px;
-    margin-left: auto;
-    margin-right: auto;
-    
+.cd2 {
+  height: 500px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.cp1 {
+  color: white;
+  font-size: 30px;
 
+  text-align: center;
+  font-variant: small-caps;
 }
-.cp1{
-    color:white;
-    font-size: 30px;
-    
-    text-align: center;
-    font-variant: small-caps;
-   
-
+.map {
+  height: 500px;
+  width: 500px;
+  border-radius: 10px;
+  margin-top: 4%;
+  margin-left: auto;
+  margin-right: auto;
 }
-.map{
-    height: 500px;
-    width: 500px;
-    border-radius: 10px;
-    margin-top: 4%;
-    margin-left: auto;
-    margin-right: auto;
+.cttxt {
+  display: flex;
+  margin-top: 7%;
 }
-.cttxt{
-    display: flex;
-    margin-top: 7%;
-
+.ctcp1 {
+  margin-left: 4%;
+  font-size: 25px;
+  color: white;
+  margin-top: 2%;
 }
-.ctcp1{
-    margin-left:4%;
-    font-size: 25px;
-    color:white ;
-    margin-top: 2%;
-   
-
-}
-.ctcont1{
-    margin-top: 13%;
-   margin-left: auto;
-   margin-right: auto;
+.ctcont1 {
+  margin-top: 13%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hover-fx {
@@ -74,11 +64,10 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  content: '';
+  content: "";
   box-sizing: content-box;
- 
 
-  box-shadow: 0px 0px 0px 3px rgba(4, 170,248,0.9);
+  box-shadow: 0px 0px 0px 3px rgba(4, 170, 248, 0.9);
   top: 0;
   left: 0;
   opacity: 0;
@@ -86,128 +75,117 @@
 }
 
 .hover-fx:hover {
-  background-color: rgba(4, 170,248,0.9);
+  background-color: rgba(4, 170, 248, 0.9);
   color: #ffffff;
-  box-shadow:1px 1px 1px 1px #1cb5ad;
+  box-shadow: 1px 1px 1px 1px #1cb5ad;
 }
 
 .hover-fx:hover:after {
   opacity: 1;
   transform: scale(1.15);
 }
-.bi{
-  width:100px;
+.bi {
+  width: 100px;
   margin-left: -7%;
   margin-top: -10%;
-  
 }
 
-.loader{
+.loader {
   margin-left: 100px;
   margin-top: 70px;
   position: absolute;
-
 }
 
-
-
-
-@media only screen and (max-width:991px) {
-    
-    .map{
-        height:350px;
-        width:380px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 7%;
-    }
-    .ctcp1{
-        margin-left:4%;
-        font-size: 19px;
-        color:white ;
-        width: 200px;
-        height: 130px;
-        padding-top: 40px;
-       
-    }
-
-    .cd1{
-      height:400px;
-      width:400px;
-      margin-left: auto;
-      margin-right: auto;
-     
+@media only screen and (max-width: 991px) {
+  .map {
+    height: 350px;
+    width: 380px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 7%;
+  }
+  .ctcp1 {
+    margin-left: 4%;
+    font-size: 19px;
+    color: white;
+    width: fit-content;
+    height: 100%;
   }
 
-  .ctcont1{
+  .cd1 {
+    height: 400px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .ctcont1 {
     margin-top: 0;
     margin-left: 5%;
     margin-right: auto;
-    
   }
-   
-  .hover-fx{
+
+  .hover-fx {
     margin-top: auto;
     margin-bottom: auto;
   }
-  .cttxt{
-   margin-left: auto;
-   margin-right: auto;
-
-}
-.loader{
-  margin-left: 50px;
-  margin-top: 70px;
-  position: absolute;
-
-}
-    
-    
+  .cttxt {
+    margin-left: auto;
+    margin-right: auto;
   }
+  .loader {
+    margin-left: 50px;
+    margin-top: 70px;
+    position: absolute;
+  }
+}
+lord-icon {
+  margin-top: -2%;
+  height: 100px;
+  width: 100px;
+}
+@media only screen and (max-width: 600px) {
   lord-icon {
-    margin-top: -2%;
-    height: 100px;
-    width: 100px;
-}
-  @media only screen and (max-width: 600px) {
-    
-    lord-icon {
-      margin-top: 7%;
-      height: 75px;
-      width: 75px;
+    margin-top: -5%;
+    height: 75px;
+    width: 75px;
   }
-  lord-icon#loc{
-    margin-top: 12%;
+  lord-icon#loc {
+   
+  
   }
 
-  .loader{
+  .loader {
     margin-left: 55px;
     margin-top: 70px;
     position: absolute;
-  
   }
-     
 
+  .cd2{
+    height:35%;
   }
-  p.ctcp1.header {
-    margin-left: -1%;
+}
+p.ctcp1.header {
+  margin-left: -1%;
 }
 div#cont {
   margin-top: 15%;
 }
 
+.cttxt {
+  display: flex;
+  margin-top: 0%;
+  padding-top: 0%;
+}
+
 a#bus {
   text-decoration: none;
 }
-
-
-
-
-  
-  
-  
-
-
-  
-  
-  
+lord-icon#loc {
+  height: 75px !important;
+  width: 75px !important;
+  padding: 13px 74px 1px 1px;
+}
+lord-icon#lob {
+  padding: 14px 67px 1px 1px;
+}
