--- a/src/component/events.css
+++ b/src/component/events.css
@@ -1,13 +1,13 @@
 .eh1{
 
-   text-align: center;
-   
-font-weight: 400;
-font-size: 40px;
-line-height: 61px;
-color: #FFFFFF;
-padding-bottom: 3%;
-font-variant: small-caps;
+  text-align: center;
+  font-family: space;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 61px;
+  color: #FFFFFF;
+  padding-bottom: 3%;
+  font-variant: small-caps;
 
 }
 
