--- a/src/component/events.css
+++ b/src/component/events.css
@@ -137,6 +137,7 @@ font-size: 30px;
 
 
 @media only screen and (max-width:740px) {
+  
     
   .circle-1 {
     width:150px !important;
@@ -169,6 +170,10 @@ font-size: 30px;
   
 }
 @media only screen and (max-width: 600px) {
+
+  .col-sm-6.col-md-6.col-lg-2.pad {
+    height: 220px;
+}
 
 img#calender{
   opacity: 0.9;
