--- a/src/component/travel.css
+++ b/src/component/travel.css
@@ -17,7 +17,7 @@
     border-radius: 50px;
 }
 
-ul ,h5 {
+.ul ,.h5 {
     color: whitesmoke;
     padding: 10px;
     font-size: 25px;
@@ -98,7 +98,7 @@ ul ,h5 {
     border-radius:unset;
         
     }    
-    ul, h5 {
+    .ul, .h5 {
         color: unset;
         padding: unset;
         font-size: unset;
@@ -107,7 +107,8 @@ ul ,h5 {
         margin-left: 15px;
         margin-right: 15px;
     }
-    h5{
+    .h5{
+        border: 1px solid #c8cdd0;
         margin-top: 5%;
         font-family: "Sofia", sans-serif;
         color: #24FE41;
