--- a/src/component/travel.css
+++ b/src/component/travel.css
@@ -5,10 +5,13 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
+}
+
+.gt {
     font-size: 35px;
 }
 
-.card-body {
+.cb {
 
     margin: 100px;
     background-color: #1f1f1f;
@@ -20,7 +23,7 @@
 .ul ,.h5 {
     color: whitesmoke;
     padding: 10px;
-    font-size: 25px;
+    font-size: 20px;
     word-break: keep-all;
 }
 
@@ -90,7 +93,7 @@
         width: 300px !important;
     }
 
-    .card-body{
+    .cb{
         margin: unset;
     background-color: unset;
     padding:unset;
@@ -127,4 +130,6 @@
   #hod{
     opacity: 0;
   }
-  
+  .ul, .h5{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
